feature Hours counting method in Travel services